--- a/src/components/Appointments/index.css
+++ b/src/components/Appointments/index.css
@@ -91,6 +91,9 @@ ul {
   .main-img {
     display: none;
   }
+  .appointment-container {
+    margin: 25px;
+  }
   .appointment-card-container {
     display: flex;
     flex-direction: column;
@@ -107,7 +110,7 @@ ul {
     margin-left: 0px;
     width: 100%;
   }
-  hr{
+  hr {
     width: 75%;
     margin-left: 4rem;
   }
